--- a/index.html
+++ b/index.html
@@ -6,33 +6,50 @@
     <title>friend.ly</title>
     <link rel="normalize" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="./sass/main.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-      <!-- HEADER -->
-      <div class="friendlyApp">
-        <h1>friend.ly</h1>
-      </div>
-      <!-- NAV BAR -->
-      <div class="nav-bar">
-        <ul class="nav nav-tabs">
-            <li role="friendFeed" class="active"><a href="#">My Feed</a></li>
-            <li role="details"><a href="#">About Friends</a></li>
-            <li role="hobby"><a href="#">Hobbies</a></li>
-        </ul>
-      </div>
+        <!-- HEADER -->
+        <div class="friendlyApp">
+            <h1>friend.ly</h1>
+        </div>
+        <!-- NAV BAR -->
+        <div class="nav-bar">
+            <ul class="nav nav-tabs">
+                <li role="friendFeed" class="active"><a href="#">My Feed</a></li>
+                <li role="details"><a href="#">About Friends</a></li>
+                <li role="hobby"><a href="#">Hobbies</a></li>
+            </ul>
+        </div>
     </header>
-
-    <!-- COLUMN 1: FRIENDS LIST -->
-    <div class="row">
-      <div class="col-sm-4">Friends List</div>
-      <div class="col-sm-8">Add Me</div>
+    <div id="mainContainer">
+        <!-- COLUMN 1: PEOPLE I'VE FRIENDED - FRIENDS LIST -->
+        <section id="friendsList">
+            <div class="newFriendRow">Friends List
+                    <img src="https://randomuser.me/api/portraits/men/7.jpg" alt="" />
+                    <div class="info">
+                        <h3>Justin</h3>
+                        <h4>friends since June 24, 2016</h4>
+                    </div>
+                <div class="newFriendRow">
+                    <img src="https://randomuser.me/api/portraits/women/7.jpg">
+                    <div class="info">
+                        <h2>Sarah</h2>
+                        <h3>added on June 24, 2016</h3>
+                    </div>
+                </div>
+        </section>
+        <!-- FRIENDS I CAN ADD -->
+        <section id="friendFeed">
+              <div class="myPeeps">Friend Feed
+              </div>
+          </div>
+        </section>
+        <script src="app.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     </div>
-
-    <script src="./js/app.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </body>
 
 </html>
